force-app/main/default/objects/Map_Supporting_Doc__c/Map_Supporting_Doc__c.object-meta.xml
<CustomObject>
    <description>Instruction for mandatory invoice supporting documents</description>
    <label>Map Supporting Doc</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Map Supporting Doc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Supporting Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>