force-app/main/default/objects/Map_Supporting_Doc__c/fields/All_Checks__c.field-meta.xml
<CustomField>
    <fullName>All_Checks__c</fullName>
    <formula>Parent_Supporting_Document__r.Parent_Supporting_Document__r.Checks__c   + br() +
Parent_Supporting_Document__r.Checks__c  + br() +
 Checks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Checks</label>
    <type>Text</type>
</CustomField>