force-app/main/default/objects/Map_Supporting_Doc__c/fields/Checks__c.field-meta.xml
<CustomField>
    <fullName>Checks__c</fullName>
    <label>Checks</label>
    <type>TextArea</type>
</CustomField>