force-app/main/default/objects/Map_Supporting_Doc__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Contract</fullName>
            </value>
            <value>
                <fullName>Invoice Example</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Purchase Order example</fullName>
                <label>Purchase Order</label>
            </value>
            <value>
                <fullName>Proof of Delivery Example</fullName>
                <label>Proof of Delivery</label>
            </value>
            <value>
                <fullName>Shipping Ownership Transfer example</fullName>
                <label>Shipping Ownership Transfer</label>
            </value>
            <value>
                <fullName>Certificate of Origin example</fullName>
                <label>Certificate of Origin</label>
            </value>
            <value>
                <fullName>Certificate of Inspection example</fullName>
                <label>Certificate of Inspection</label>
            </value>
            <value>
                <fullName>Marine Insurance example</fullName>
                <label>Marine Insurance</label>
            </value>
            <value>
                <fullName>Bill of Lading example</fullName>
                <label>Bill of Lading</label>
            </value>
            <value>
                <fullName>Packing List example</fullName>
                <label>Packing List</label>
            </value>
            <value>
                <fullName>Project Sign Off</fullName>
            </value>
            <value>
                <fullName>Progress Claim Example</fullName>
                <label>Progress Claim</label>
            </value>
            <value>
                <fullName>Purchase Order(Outward)</fullName>
            </value>
            <value>
                <fullName>Purchase Order(Inward)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>