force-app/main/default/objects/Map_Supporting_Doc__c/fields/Parent_Supporting_Document__c.field-meta.xml
<CustomField>
    <fullName>Parent_Supporting_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Supporting Document</label>
    <referenceTo>Map_Supporting_Doc__c</referenceTo>
    <relationshipLabel>Map Supporting Docs</relationshipLabel>
    <relationshipName>Map_Supporting_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>