force-app/main/default/objects/Map_Supporting_Doc__c/fields/Required_from__c.field-meta.xml
<CustomField>
    <fullName>Required_from__c</fullName>
    <label>Required from</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>