force-app/main/default/objects/Map_Supporting_Doc__c/fields/Supplier_Buyer_Map_name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map_name__c</fullName>
    <formula>Supplier_Buyer_Map__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Buyer Map Name</label>
    <type>Text</type>
</CustomField>