force-app/main/default/objects/Map_Supporting_Doc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Supporting_Document__c</columns>
    <columns>Supplier_Buyer_Map__c</columns>
    <columns>Document_Type__c</columns>
    <columns>notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>